# findr

./: .pre-commit-config.yaml  Cargo.toml
.reuse/: dep5
src/: entry.rs  filter.rs  lib.rs  main.rs  options.rs
src/filter/: duration.rs  duration_filter.rs  file_type.rs  mod.rs  octal.rs  owner_filter.rs  size_filter.rs  testing.rs  type_filter.rs
tests/: findr.rs
