[package]
name = "findr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive", "cargo"] }
humantime = "2.1.0"
is_executable = "1.0.1"
parse-size = "1.0.0"
regex = "1.7.1"
signal-hook = "0.3.15"
thiserror = "1.0.38"
users = "0.11.0"
walkdir = "2.3.2"
